SystemUI: add nfc tile and android beam mode
* Drawable taken from material.io

CypherOS Edits: This is based on Anas's Patchset 3, which
includes a detail view and support for switching to Android Beam.
Unfortunately this was removed to follow-up submission to
AOSP, but i like this version better.

Signed-off-by: Chris <chris@cypheros.co>
Signed-off-by: Ícaro Hoff <icarohoff@gmail.com>
Change-Id: I7dfaf3a4dca0c01d24be397e43ab131eb9885f62

--- a/packages/SystemUI/res/values/aoscp_strings.xml
+++ b/packages/SystemUI/res/values/aoscp_strings.xml
@@ -142,5 +142,20 @@
 
     <!-- Screenshot QS tile -->
     <string name="quick_settings_screenshot_label">Screenshot</string>
+	
+	<!-- QuickSettings: NFC tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_nfc_label">NFC</string>
+    <!-- QuickSettings: NFC (off) [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_nfc_off">NFC is disabled</string>
+    <!-- QuickSettings: NFC (on) [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_nfc_on">NFC is enabled</string>
+    <!-- QuickSettings: NFC and Android Beam string [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_nfc_and_beam">NFC and\nAndroid Beam</string>
+    <!-- QuickSettings: NFC only string [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_nfc_no_beam">NFC only</string>
+    <!-- QuickSettings: NFC and Android Beam are enabled string [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_nfc_and_beam_detail">NFC and Android Beam are enabled</string>
+    <!-- QuickSettings: NFC is enabled, Android Beam disabled string [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_nfc_no_beam_detail">NFC is enabled, Android Beam disabled</string>
 
 </resources>
