--- a/packages/SystemUI/res/values/aoscp_strings.xml
+++ b/packages/SystemUI/res/values/aoscp_strings.xml
@@ -158,4 +158,15 @@
     <!-- QuickSettings: NFC is enabled, Android Beam disabled string [CHAR LIMIT=NONE] -->
     <string name="quick_settings_nfc_no_beam_detail">NFC is enabled, Android Beam disabled</string>
 
+	<!-- Heads Up QS Tile -->
+    <string name="quick_settings_heads_up_label">Heads up</string>
+    <string name="accessibility_quick_settings_heads_up_off">Heads up off</string>
+    <string name="accessibility_quick_settings_heads_up_on">Heads up on</string>
+    <string name="accessibility_quick_settings_heads_up_changed_off">Heads up turned off</string>
+    <string name="accessibility_quick_settings_heads_up_changed_on">Heads up turned on</string>
+	
+	<!-- Heads up snooze toast -->
+    <string name="heads_up_snooze_message_one_minute"><xliff:g id="string">%s</xliff:g> - Heads up notifications are snoozing for 1 minute.</string>
+    <string name="heads_up_snooze_message"><xliff:g id="string">%s</xliff:g> - Heads up notifications are snoozing for <xliff:g id="number">%d</xliff:g> minutes.</string>
+
 </resources>
